--- a/templates/login.html
+++ b/templates/login.html
@@ -1,34 +1,55 @@
-<link rel="stylesheet" href="/static/style.css" type="text/css">
-{% block body %}
-{% if session['logged_in'] %}
-<p>You're logged in already!</p>
-{% else %}
- 
- 
-<form action="/login" method="POST">
-	<div class="login">
-		<div class="login-screen">
-			<div class="app-title">
-				<h1>Login</h1>
-			</div>
- 
-			<div class="login-form">
-				<div class="control-group">
-				<input type="text" class="login-field" value="" placeholder="username" name="username">
-				<label class="login-field-icon fui-user" for="login-name"></label>
-				</div>
- 
-				<div class="control-group">
-				<input type="password" class="login-field" value="" placeholder="password" name="password">
-				<label class="login-field-icon fui-lock" for="login-pass"></label>
-				</div>
- 
-                <input type="submit" value="Log in" class="btn btn-primary btn-large btn-block" >
-			    <br>
-			</div>
-		</div>
-	</div>
-</form>
- 
-{% endif %}
-{% endblock %}
+<!DOCTYPE html>
+<html >
+<head>
+  <meta charset="UTF-8">
+  <title>Domain Name</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+
+  <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
+<link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+
+      <link rel="stylesheet" href="static/dist/css/style.css">
+
+
+</head>
+
+<body>
+
+<!-- Mixins-->
+<!-- Pen Title-->
+<div class="pen-title">
+  <h1>Domain Name</h1>
+</div>
+<div class="container">
+  <div class="card"></div>
+  <div class="card">
+    <h1 class="title">Login</h1>
+    <form action="/login" method="POST">
+        <div class="input-container">
+        <input type="text" class="login-field" value="" placeholder="username" name="username">
+        <label class="login-field-icon fui-user" for="login-name"></label>
+        <div class="bar"></div>
+        </div>
+
+        <div class="input-container">
+        <input type="password" class="login-field" value="" placeholder="password" name="password">
+        <label class="login-field-icon fui-lock" for="login-pass"></label>
+        <div class="bar"></div>
+        </div>
+
+      <div class="button-container">
+        <button><span>Go</span></button>
+      </div>
+
+  </form>
+</div>
+
+</div>
+    
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+    <script src="static/js/index.js"></script>
+
+</body>
+</html>
