--- a/templates/page2.html
+++ b/templates/page2.html
@@ -206,12 +206,10 @@ span.input-group-addon i {
 						</div>
 -->
                             
-<!--
 						<div class="form-group ">
 							<a href="?" target="_blank" type="button" id="button" class="btn btn-primary btn-lg btn-block login-button">Submit</a>
 						</div>
--->
-                        <input type = "submit" value = "Submit" />
+<!--                        <input type = "submit" value = "Submit" />-->
 					</form>
 				</div>
 			</div>
