--- a/templates/page2.html
+++ b/templates/page2.html
@@ -210,6 +210,9 @@ span.input-group-addon i {
 							<a href="?" target="_blank" type="button" id="button" class="btn btn-primary btn-lg btn-block login-button">Submit</a>
 						</div>
 <!--                        <input type = "submit" value = "Submit" />-->
+                        <div class="form-group ">
+                        <a href="/plan" type="button" id="button" class="btn btn-primary btn-lg btn-block login-button">View Trip Budget</a>
+                            </div>
 					</form>
 				</div>
 			</div>
