--- a/templates/page2.html
+++ b/templates/page2.html
@@ -207,7 +207,7 @@ span.input-group-addon i {
 -->
                             
 						<div class="form-group ">
-							<a href="?" target="_blank" type="button" id="button" class="btn btn-primary btn-lg btn-block login-button">Submit</a>
+							<a href="/form" type="button" id="button" class="btn btn-primary btn-lg btn-block login-button">Submit</a>
 						</div>
 <!--                        <input type = "submit" value = "Submit" />-->
                         <div class="form-group ">
