--- a/templates/page2.html
+++ b/templates/page2.html
@@ -138,7 +138,7 @@ span.input-group-addon i {
 			<div class="row main">
 				<div class="main-login main-center">
 				<h5>Let us know your budget.</h5>
-                    <form action = "{{ request.path }}" method = "post">                    
+                    <form method="POST" action="{{ url_for('filled') }}">                   
                         <div class="form-group">
 							<label for="name" class="cols-sm-2 control-label">Let's travel together.</label>
 							<div class="cols-sm-10">
@@ -207,7 +207,8 @@ span.input-group-addon i {
 -->
                             
 						<div class="form-group ">
-							<a href="/form" type="button" id="button" class="btn btn-primary btn-lg btn-block login-button">Submit</a>
+<!--							<a href="/form" type="button" id="button" class="btn btn-primary btn-lg btn-block login-button">Submit</a>-->
+                            <input type = "submit" value = "submit" /><br>
 						</div>
 <!--                        <input type = "submit" value = "Submit" />-->
                         <div class="form-group ">
